--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -69,12 +69,12 @@
         >
           <div class="justify-center items-center mb-3">
             <% let url = avatar %> <% if(url.search('https://') === -1){ %>
-            <img 
+            <img
               class="rounded-full h-20 w-20 object-cover"
               src="/uploads/avatars/<%= avatar %>"
             />
             <% } else {%>
-            <img 
+            <img
               class="rounded-full h-20 w-20 object-cover"
               src="<%= avatar %>"
             />
@@ -346,18 +346,14 @@
                           focus:border-blue-500
                           dark:focus:border-blue-500
                           focus:outline-none focus:ring
-<<<<<<< HEAD
                         "
                         type="tel"
-=======
-                          "
                         type="number"
->>>>>>> main
                         value="<%= user_phone %>"
-                        />
+                      />
                     </div>
                   </div>
-                  
+
                   <div class="w-full mt-4">
                     <label
                       class="
@@ -369,11 +365,11 @@
                         dark:text-gray-200
                       "
                       >Short bio</label
-                      >
+                    >
 
                     <textarea
                       class="
-                      block
+                        block
                         w-full
                         h-40
                         px-4
@@ -475,7 +471,6 @@
           md:max-w-md
           mx-auto
           rounded
-          shadow-lg
           z-50
           overflow-y-auto
         "
@@ -501,50 +496,62 @@
           <!--Body-->
           <div class="my-3 relative">
             <div>
-              <form action="/user-avatar-change" enctype="multipart/form-data"  method="post">
-              <% if(url.search('https://') === -1){ %>
-              <img id="img" 
-                class="rounded-full h-20 w-20 object-cover"
-                src="/uploads/avatars/<%= avatar %>"
-              />
-              <% } else{%>
-              <img  id="img" 
-                class="rounded-full h-20 w-20 object-cover"
-                src="<%= avatar %>"
-              />
-              <% } %>
-              <label class="absolute top-12 left-40">
-                <input  type="file"  name="avatar" class="hidden"  onchange="readURL(this)"  accept="accept" />
-                <small
-                  class="
-                    text-sm
-                    font-medium
-                    cursor-pointer
-                    rounded-full
-                    px-4
-                    py-2
-                    bg-gray-200
-                  "
-                >
-                  Change
-                </small>
-                <button
-            type="submit"
-              class="
-                focus:outline-none
-                px-4
-                bg-teal-500
-                py-2
-                ml-3
-                rounded-lg
-                text-white
-                bg-green-400
-              "
-            >
-              Save
-            </button>
-              </label>
-            </form>
+              <form
+                action="/user-avatar-change"
+                enctype="multipart/form-data"
+                method="post"
+              >
+                <% if(url.search('https://') === -1){ %>
+                <img
+                  id="img"
+                  class="rounded-full h-20 w-20 object-cover"
+                  src="/uploads/avatars/<%= avatar %>"
+                />
+                <% } else{%>
+                <img
+                  id="img"
+                  class="rounded-full h-20 w-20 object-cover"
+                  src="<%= avatar %>"
+                />
+                <% } %>
+                <label class="absolute top-12 left-40">
+                  <input
+                    type="file"
+                    name="avatar"
+                    class="hidden"
+                    onchange="readURL(this)"
+                    accept="accept"
+                  />
+                  <small
+                    class="
+                      text-sm
+                      font-medium
+                      cursor-pointer
+                      rounded-full
+                      px-4
+                      py-2
+                      bg-gray-200
+                    "
+                  >
+                    Change
+                  </small>
+                  <button
+                    type="submit"
+                    class="
+                      focus:outline-none
+                      px-4
+                      bg-teal-500
+                      py-2
+                      ml-3
+                      rounded-lg
+                      text-white
+                      bg-green-400
+                    "
+                  >
+                    Save
+                  </button>
+                </label>
+              </form>
 
               <div>
                 <h5 class="text-sm mb-1">Sync a profile picture with</h5>
@@ -696,35 +703,30 @@
             >
               Save
             </button>
-            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- <button class="btn-hover bg-blue-500 px-4">hover</button> -->
-
     <script>
       function readURL(input) {
-    if (input.files && input.files[0]) {
-    
-      var reader = new FileReader();
-      reader.onload = function (e) { 
-        document.querySelector("#img").setAttribute("src",e.target.result);
-      };
+        if (input.files && input.files[0]) {
+          var reader = new FileReader();
+          reader.onload = function (e) {
+            document.querySelector("#img").setAttribute("src", e.target.result);
+          };
 
-      reader.readAsDataURL(input.files[0]); 
-    }
-  }
+          reader.readAsDataURL(input.files[0]);
+        }
+      }
     </script>
     <script>
-      
-      function avatarChange(){
-        const avatar = document.getElementsByName('avatar')
-        console.log(avatar)
+      function avatarChange() {
+        const avatar = document.getElementsByName("avatar");
+        console.log(avatar);
       }
-      </script>
+    </script>
 
     <script src="/js/profile.js"></script>
-
   </body>
 </html>
