--- a/views/pages/updateUser.ejs
+++ b/views/pages/updateUser.ejs
@@ -55,7 +55,7 @@
                                   
                 </div>
                 <div class="">
-                    <label>Password<label>
+                    <label>New Password<label>
                             <input id="userPass" type="password" name="userPass" placeholder="Password"
                                 class="w-full px-4 py-2 mt-2 border rounded-md focus:outline-none focus:ring-1 focus:ring-blue-600" value="">
                                 
