--- a/views/pages/allUsers.ejs
+++ b/views/pages/allUsers.ejs
@@ -374,7 +374,7 @@
               >
             </td>
             <td class="p-2 text-center">
-              <a href="/report/employee/<%= user.id %>"
+              <a href="/reports/employee/<%= user.id %>"
                 ><span class="bg-yellow-400 text-gray-50 rounded-md px-2"
                   >Details</span
                 >
