--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -536,6 +536,7 @@
                     Change
                   </small>
                   <button
+                    disabled
                     type="submit"
                     class="
                       focus:outline-none
