--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %></title>
-
-    <link rel="stylesheet" href="<%=baseUrl%>/css/main.css" />
-    <link rel="stylesheet" href="<%= baseUrl%>/css/styles.css" />
-    <link rel="stylesheet" href="/css/vendors/toastify.css" />
-    <script src="js/vendors/toastify.js"></script>
+    <title>Oclock UI</title>
+    <link rel="stylesheet" href="<%=baseUrl%>/style.css" />
+    <link rel="stylesheet" href="<%=baseUrl%>/modal.css" />
+    <link rel="stylesheet" href="<%=baseUrl%>/responsive.css" />
   </head>
   <body>
     <%- include("./nav.ejs"); -%>
-    <%- include("./flash-message.ejs"); -%>
-
-    <div class="container">
-  </body>
-</html>
+    <main>
