--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,104 +1,1 @@
-<div class="navigation">
-  <ul>
-    <% if( loggedInUser.userRole ==='user') {%>
-
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/dashboard">
-        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
-        <span class="title">Dashboard</span>
-      </a>
-    </li>
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/report">
-        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
-        <span class="title">Reports</span>
-      </a>
-    </li>
-
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/employee-see/holidays">
-        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title"> Holidays</span>
-      </a>
-    </li>
-    <% } else { %>
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/dashboard">
-        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
-        <span class="title">Dashboard</span>
-      </a>
-    </li>
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/report">
-        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
-        <span class="title">Reports</span>
-      </a>
-    </li>
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/add-user">
-        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title">Add User</span>
-      </a>
-    </li>
-
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/holiday-list">
-        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title"> Holidays</span>
-      </a>
-    </li>
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/leavedays-list">
-        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title"> Leavedays</span>
-      </a>
-    </li>
-
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/all-users">
-        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title">Users</span>
-      </a>
-    </li>
-
-    <li class="list">
-      <b></b>
-      <b></b>
-      <a href="/options">
-        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
-        <span class="title">Options</span>
-      </a>
-    </li>
-    <% } %>
-  </ul>
-</div>
-<div class="head">
-  <div class="toggle">
-    <ion-icon name="menu-outline" class="open"></ion-icon>
-  </div>
-
-  <ul>
-    <li class="btn-logout"><a href="/logout">logout</a></li>
-    <li><a href=""><%=loggedInUser.userName %></a></li>
-    <li><%=loggedInUser.userRole %></li>
-    <li><a href="/profile">Profile page</a></li>
-  </ul>
-</div>
+<%- include("./side-nav.ejs"); -%> <%- include("./bottom-nav.ejs"); -%>
