--- a/views/pages/options.ejs
+++ b/views/pages/options.ejs
@@ -1,55 +1,27 @@
 <%- include("../partials/header"); -%>
-
-<style>
-  .table-holidays {
-    border-spacing: 0 15px;
-    width: 500px;
-  }
-
-  .table-holidays tr {
-    border-radius: 20px;
-  }
-
-  .table-holidays tr td:nth-child(n + 3),
-  .table-holidays tr th:nth-child(n + 3) {
-    border-radius: 0 0.625rem 0.625rem 0;
-  }
-
-  .table-holidays tr td:nth-child(1),
-  tr th:nth-child(1) {
-    border-radius: 0.625rem 0 0 0.625rem;
-  }
-</style>
-
-<h4 class="text-2xl font-bold ml-10">Options List</h4>
-
-<div class="bg-white flex justify-center mt-4">
-  <div class="col-span-12">
-    <div class="overflow-auto lg:overflow-visible">
-      <table
-        class="table-holidays text-gray-400 border-separate space-y-6 text-sm"
-      >
-        <thead class="bg-blue-500 text-white">
-          <tr>
-            <th class="p-3">SL</th>
-            <th class="p-3">Title</th>
-            <th class="p-3 text-left">Value</th>
-          </tr>
-        </thead>
-        <tbody id="holiday-list">
-          <% optionList.map((op,idx) =>{ %>
-
-          <tr class="bg-blue-200 text-black">
-            <td class="p-3"><%= idx + 1 %></td>
-            <td class="p-3"><%= op.option_title %></td>
-            <td class="p-3"><%= op.option_value %></td>
-          </tr>
-
-          <% }) %>
-        </tbody>
-      </table>
+   <div id="options">
+      <div class="options-cards">
+        <a href="/options/projects">
+        <div class="options-card">
+          <div class="card-icon"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"><path d="M23 18c0 .75-.21 1.46-.58 2.06-.21.36-.48.68-.79.94-.7.63-1.62 1-2.63 1-1.22 0-2.31-.55-3.03-1.41-.02-.03-.05-.05-.07-.08-.12-.14-.23-.29-.32-.45A3.92 3.92 0 0 1 15 18c0-1.26.58-2.39 1.5-3.12.69-.55 1.56-.88 2.5-.88 1 0 1.9.36 2.6.97.12.09.23.2.33.31C22.59 16 23 16.95 23 18ZM20.49 17.98h-2.98M19 16.52v2.99"  stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path><path d="M3.17 7.44 12 12.55l8.77-5.08M12 21.61v-9.07" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M21.61 9.17v5.66c0 .05 0 .09-.01.14-.7-.61-1.6-.97-2.6-.97-.94 0-1.81.33-2.5.88A3.97 3.97 0 0 0 15 18c0 .75.21 1.46.58 2.06.09.16.2.31.32.45l-1.83 1.01c-1.14.64-3 .64-4.14 0l-5.34-2.96c-1.21-.67-2.2-2.35-2.2-3.73V9.17c0-1.38.99-3.06 2.2-3.73l5.34-2.96c1.14-.64 3-.64 4.14 0l5.34 2.96c1.21.67 2.2 2.35 2.2 3.73Z"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></div>
+          <p class="card-title">Project</p>
+          <p class="card-text">Click to add your project.</p>
+        </div>
+      </a>
+        <a href="/holiday">
+          <div class="options-card">
+            <div class="card-icon"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"><path d="M23 18c0 .75-.21 1.46-.58 2.06-.21.36-.48.68-.79.94-.7.63-1.62 1-2.63 1-1.22 0-2.31-.55-3.03-1.41-.02-.03-.05-.05-.07-.08-.12-.14-.23-.29-.32-.45A3.92 3.92 0 0 1 15 18c0-1.26.58-2.39 1.5-3.12.69-.55 1.56-.88 2.5-.88 1 0 1.9.36 2.6.97.12.09.23.2.33.31C22.59 16 23 16.95 23 18ZM20.49 17.98h-2.98M19 16.52v2.99"  stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path><path d="M3.17 7.44 12 12.55l8.77-5.08M12 21.61v-9.07" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M21.61 9.17v5.66c0 .05 0 .09-.01.14-.7-.61-1.6-.97-2.6-.97-.94 0-1.81.33-2.5.88A3.97 3.97 0 0 0 15 18c0 .75.21 1.46.58 2.06.09.16.2.31.32.45l-1.83 1.01c-1.14.64-3 .64-4.14 0l-5.34-2.96c-1.21-.67-2.2-2.35-2.2-3.73V9.17c0-1.38.99-3.06 2.2-3.73l5.34-2.96c1.14-.64 3-.64 4.14 0l5.34 2.96c1.21.67 2.2 2.35 2.2 3.73Z"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></div>
+            <p class="card-title">Holiday</p>
+            <p class="card-text">Click to add your holisay.</p>
+          </div>
+        </a>
+        <a href="/options/notice">
+          <div class="options-card">
+            <div class="card-icon"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"><path d="M23 18c0 .75-.21 1.46-.58 2.06-.21.36-.48.68-.79.94-.7.63-1.62 1-2.63 1-1.22 0-2.31-.55-3.03-1.41-.02-.03-.05-.05-.07-.08-.12-.14-.23-.29-.32-.45A3.92 3.92 0 0 1 15 18c0-1.26.58-2.39 1.5-3.12.69-.55 1.56-.88 2.5-.88 1 0 1.9.36 2.6.97.12.09.23.2.33.31C22.59 16 23 16.95 23 18ZM20.49 17.98h-2.98M19 16.52v2.99"  stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path><path d="M3.17 7.44 12 12.55l8.77-5.08M12 21.61v-9.07" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M21.61 9.17v5.66c0 .05 0 .09-.01.14-.7-.61-1.6-.97-2.6-.97-.94 0-1.81.33-2.5.88A3.97 3.97 0 0 0 15 18c0 .75.21 1.46.58 2.06.09.16.2.31.32.45l-1.83 1.01c-1.14.64-3 .64-4.14 0l-5.34-2.96c-1.21-.67-2.2-2.35-2.2-3.73V9.17c0-1.38.99-3.06 2.2-3.73l5.34-2.96c1.14-.64 3-.64 4.14 0l5.34 2.96c1.21.67 2.2 2.35 2.2 3.73Z"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></div>
+            <p class="card-title">Notice</p>
+            <p class="card-text">Click to add your notice.</p>
+          </div>
+        </a>
+      </div>
     </div>
-  </div>
-</div>
-
-<%- include("../partials/footer"); -%>
+    <%- include("../partials/footer"); -%>
