--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,5 @@
-</div>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="<%=baseUrl%>/js/bundle.js"></script>
+</main>
+<script src="<%=baseUrl%>/main.js"></script>
+<script src="<%=baseUrl%>/startData.js"></script>
 </body>
 </html>
