--- a/public/modal.css
+++ b/public/modal.css
@@ -1,62 +1,58 @@
-.modal-container::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
+.modal-container::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
 }
 
-.modal-container::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #F5F5F5;
+.modal-container::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
 }
 
-.modal-container::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: var(--deep)
+.modal-container::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--deep);
 }
 
-.modal-container{
+.modal-container {
   display: none;
-  position: fixed; 
-  z-index: 1; 
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
+  width: 100%;
+  height: 100%;
   padding: 30px;
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-.modal{
+.modal {
   text-align: center;
   width: 400px;
   height: auto;
   border-radius: 20px;
   padding: 20px;
   margin: auto;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   background: var(--white);
 }
-.modal-head{
+.modal-head {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
 }
-.modal-title{
+.modal-title {
   font-size: 25px;
   font-weight: 700;
   color: var(--deep);
 }
-.modal-close svg{
+.modal-close svg {
   stroke: var(--deep-gray);
   cursor: pointer;
 }
-.modal-close svg:hover{
+.modal-close svg:hover {
   stroke: var(--deep2);
   cursor: pointer;
 }
@@ -65,39 +61,40 @@
   align-items: center;
 }
 
-.profile-avatar img{
+.profile-avatar img {
   width: 100px;
   height: 100px;
   margin-bottom: 20px;
-  border: 1px solid #C8C8C8;
+  border: 1px solid #c8c8c8;
   border-radius: 50%;
 }
 .container input,
 .container option,
-.container select{
+.container select {
   width: 350px;
   height: 40px;
   padding: 6px;
   margin: 12px 0px;
   font-size: 16px;
   font-weight: 400;
-  color: #5E5E5E;
-  border: 1px solid #EAEEF4;
+  color: #5e5e5e;
+  border: 1px solid #eaeef4;
   border-radius: 12px;
   text-align: center;
 }
-.container textarea{
+
+.container textarea {
   width: 350px;
   padding: 6px;
   margin: 12px 0px;
   font-size: 16px;
   font-weight: 400;
-  color: #5E5E5E;
-  border: 1px solid #EAEEF4;
+  color: #5e5e5e;
+  border: 1px solid #eaeef4;
   border-radius: 12px;
   text-align: center;
 }
-.container label{
+.container label {
   display: block;
   font-size: 16px;
   font-weight: 500;
@@ -106,7 +103,7 @@
   /* padding-top: 10px;
   padding-bottom: 10px; */
 }
-.submit-btn{
+.submit-btn {
   width: 350px;
   height: 40px;
   padding: 6px;
@@ -115,54 +112,49 @@
   line-height: 19px;
   background: var(--deep-gray);
   border: none;
-  border-radius:15px ;
-  color: #FFFFFF;
+  border-radius: 15px;
+  color: #ffffff;
   cursor: pointer;
 }
-.submit-btn:hover{
+.submit-btn:hover {
   background: var(--deep2);
 }
-@media only screen and (max-width: 1200px){
-  
+@media only screen and (max-width: 1200px) {
 }
-@media only screen and (max-width: 992px){
-  .modal-container{
+@media only screen and (max-width: 992px) {
+  .modal-container {
     padding-top: 80px;
     padding-bottom: 30px;
   }
-  
 }
-@media only screen and (max-width: 768px){
-  
+@media only screen and (max-width: 768px) {
 }
-@media only screen and (max-width: 556px){
-  
+@media only screen and (max-width: 556px) {
 }
-@media only screen and (max-width: 480px){
-  .profile-avatar img{
+@media only screen and (max-width: 480px) {
+  .profile-avatar img {
     width: 120px;
     height: 120px;
   }
-  .modal{
-    width: 90% ;
+  .modal {
+    width: 90%;
   }
   .container input,
-  .container select{
+  .container select {
     width: 90%;
   }
 
-  .container textarea{
+  .container textarea {
     width: 90%;
   }
-  .submit-btn{
+  .submit-btn {
     width: 90%;
   }
 
   /* reports page */
-  
 }
-@media only screen and (max-width: 320px){
-  .profile-avatar img{
+@media only screen and (max-width: 320px) {
+  .profile-avatar img {
     width: 90px;
     height: 90px;
   }
